Added a function to clear terminal screen to OutputManager.java and Moved from URL to URI in ConnectionManager.java